--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -19,10 +19,11 @@
             /* 
             short hand
             hierarquia: 
-            backgound color > image > position > repeat > [size] > attachment
+            backgound color > image > position > repeat > [size não funciona ] > attachment
             */
 
             background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
 
         main{
