--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
     <link rel="stylesheet" href="estilos/style.css">
+
+    <link rel="stylesheet" href="estilos/media-querye.css">
 </head>
-<body>
+
+
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
 
@@ -16,15 +22,15 @@
 
         <menu id="itens">
             <ul>
-                <li><a href="#">O1
+                <li><a href="#">Opção O1
                 </a></li>
-                <li><a href="#">O2
+                <li><a href="#">Opção O2
                 </a></li>
-                <li><a href="#">O3
+                <li><a href="#">Opção O3
                 </a></li>
-                <li><a href="#">O4
+                <li><a href="#">Opção O4
                 </a></li>
-                <li><a href="#">O5
+                <li><a href="#">Opção O5
                 </a></li>
             </ul>
         </menu>
@@ -41,6 +47,18 @@
         </article>
     </main>
     <script>
+
+        function mudouTamanho() {
+            if (window.innerwhidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+
+
+
+
         function clickMenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
